<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeechRecorder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Recording</string>
    <string name="stop">Stop Recording</string>
    <string name="play">Play Recorded Audio</string>
    <string name="stopPlayback">Stop Playback</string>
    <string name="hello">Here we go!!</string>
    <string name="title_activity_recorder_welcome_page">Welcome_to_Audio_Recorder</string>
    <string name="welcomeUsers">Hello Users! This is an Audio Recorder Application</string>
    <string name="imageDesc">RecorderImage</string>
    <string name="askUsers">Ready to Record?</string>
    <string name="btnContinue">Click to Continue!!</string>
    <string name="btnClose">CLOSE</string>
    <string name="sendMail">Send Email</string>
    <string name="goBack">Back</string>
    <string name="imageEmail">email image</string>
    <string name="title_activity_email">Email Audio</string>
    <string name="sendTitle">Send Audio attachment to....</string>
    <string name="mailAdd">Enter Email Address:</string>
    <string name="sendEmail">SEND</string>
    <string name="cancelSend">CANCEL</string>

</resources>
