<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E5AB"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.speechrecorder.RecorderWelcomePage" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeUsers"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textColor="#800000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imageDesc"
        android:src="@drawable/ic_launcher_welcome" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/askUsers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#800000"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:background="#000000"
        android:padding="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClickContinue"
        android:text="@string/btnContinue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btnCloseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="265dp"
        android:background="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onClickClose"
        android:padding="10dp"
        android:text="@string/btnClose"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>